# ubox_example

./: .gitignore  Makefile  README.md  emul_start_config.txt
.github/workflows/: example.yml  green.yml
consolehello/src/: Makefile  main.c
demo/: Makefile
demo/11_demo/: Makefile
demo/11_demo/src/: data.c  enemy_logic.h  exit_logic.c  game_util.c  item_logic.h  main.c  player_logic.c
demo/cross/: Makefile
demo/cross/android/: build.gradle  gradle.properties
demo/cross/android/app/: CMakeLists.txt  build.gradle  local.properties
demo/cross/android/app/src/androidTest/java/com/juhang/green/: ApplicationTest.java
demo/cross/android/app/src/main/: AndroidManifest.xml
demo/cross/android/app/src/main/java/com/juhang/green/: MyGame.java  StartActivity.java
demo/cross/android/app/src/main/java/com/juhang/util/: VirtualKeypad.java
demo/cross/android/app/src/main/java/org/libsdl/app/: SDLActivity.java
demo/cross/android/app/src/main/res/drawable/: imgbtn_states.xml  imgbtn_states2.xml  imgbtn_states3.xml
demo/cross/android/app/src/main/res/layout/: layout.xml
demo/cross/android/app/src/main/res/values/: strings.xml
demo/cross/android/app/src/main/res/values-ko-rKR/: strings.xml
demo/cross/data/: map.json
demo/cross/green4dos/: ConsoleProgram.sln  ConsoleProgram.vcxproj  ConsoleProgram.vcxproj.filters  game.c  game.h  green.dsp  green.dsw  green.ncb  green.opt  green.plg  green4dos.filters  green4dos.sln  green4dos.vcxproj  green4dos.vcxproj.filters  ubox_mplayer_sdl.c  ubox_sdl.c  ubox_spman_sdl.cpp
demo/cross/msvc/: green4dos.sln
demo/cross/src/: Makefile  Makefile.deps  data.c  game.c  game.h  helpers.c  main.c
demo/cross/yuza/: green4yuza.sln
demo/pyramid/: Makefile
demo/pyramid/data/: Makefile  map10.json  map11.json  map3.json  map4.json  map5.json  map6.json  map9.json
demo/pyramid/src/: Makefile  Makefile.deps  akm.z80  enemy_logic.c  exit_logic.h  item_logic.c  main.c  warp_logic.c  warp_logic.h
demo/pyramid/tools/: map_generate.py
demo/scroll/: Makefile  README.md
demo/scroll/data/: Makefile  test.json
demo/scroll/src/: Makefile  Makefile_  helpers.c  song.asm
docs/: Makefile  footer.md  spman.md  tools.md
examples/: Makefile
examples/01_hello/: Makefile  emul_start_config.txt
examples/01_hello/src/: Makefile  main.c
examples/02_consolehello/: Makefile
examples/02_consolehello/src/: Makefile  main.c  printf.z80
examples/03_timer/src/: Makefile  main.c  printf.c
examples/04_clibrary/: Makefile
examples/04_clibrary/src/: Makefile  main.c  main.c.bak
examples/05_music/: Makefile
examples/07_snakebyte/: Makefile
examples/10_breakout/: Makefile
examples/12_debugger/: symbol_conversion.py
game/: Makefile  symbol_conversion.py
game/android/: .gitignore  build.gradle
game/data/: Makefile  map2.json  map_conf.json  symbol_conversion.py
game/msvc/: .gitignore  green4win32.sln
game/src/: Makefile  data.c  game.c  helpers.h  main.c  song_playerconfig.asm
hello/: Makefile
hello/src/: Makefile  main.c
include/: mplayer.h  spman.h  ubox.h
scroll/android/: .gitignore
scroll/data/: map.json
scroll/msvc/: green4win32.sln
scroll/src/: Makefile  Makefile.deps  game.c  main.c  main.h
src/spman/: Makefile  spman.asm  spman.c
src/ubox/: ubox_fill_screen.z80  ubox_get_tile.z80  ubox_put_tile.z80  ubox_set_sprite_attr.z80  ubox_set_sprite_pat16.z80  ubox_set_sprite_pat16_flip.z80  ubox_set_sprite_pat8.z80  ubox_set_sprite_pat8_flip.z80  ubox_set_tiles.z80  ubox_set_tiles_colors.z80
timer/src/: Makefile  main.h
tools/: chksize  hdoc.py  map.py  png2sprites.py  png2tiles.py
tools/apultra/: .gitignore  README.md
tools/rasm/: Makefile
tools/tilesconverter/: .gitignore  tilesconverter.cpp  tilesconverter.vcxproj
(+125 files in other folders)
